[package]
name = "evcxr_ssg"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/JJJHolscher/evcxr-wasm"
readme = "readme.md"
description = "A convenience library for calling functions exposed to wasm in the jupyter notebook"

[dependencies]
anyhow = "1.0.81"
postcard = { version = "1.0.8", features = ["use-std"] }
rand = "0.8.5"
serde = "1.0.197"
sha2 = "0.10.8"
evcxr_ssg_macro = "0.1.3"
