[package]
name = "evcxr_ssg_macro"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/JJJHolscher/evcxr-wasm"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.55", features = ["full"] }
proc-macro2 = "1.0.79"
quote = "1.0.35"
